added addMember function